--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     </div>
                 </div>
                 <div class="fcf-form-group">
-                    <button type="submit" id="fcf-button" class="fcf-btn fcf-btn-primary fcf-btn-lg fcf-btn-block" onclick="showMailSentMessage()">Send message</button>
+                    <button type="submit" id="fcf-button" class="fcf-btn fcf-btn-primary fcf-btn-lg fcf-btn-block">Send message</button>
                 </div>
                 <!-- <div id="mail_sent" style="display: none">> Thank you! Your message has been sent. </div> -->
             </form>
